# memory-first-agent

./: .env.example  .gitignore  AI_USAGE.md  CODE_WALKTHROUGH.md  DECISIONS.md  DEMO_GUIDE.md  IMPLEMENTATION_GUIDE.md  LICENSE  MODEL_CHOICES.md  Makefile  PLAN.md  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: BDD.md  architecture.md  demo_transcript.md  seed.md  threat_model.md  verification-2026-07-06.md
docs/ai_prompts/: cli-experience.md  milestone-1.md  milestone-10.md  milestone-11.md  milestone-2.md  milestone-3.md  milestone-4.md  milestone-5.md  milestone-6.md  milestone-7.md  milestone-8.md  milestone-9.md  observability-langsmith.md
logs/: turns.sample.jsonl
scripts/: capture_demo.py  eval_grounding.py  eval_lifecycle.py  gen_env_example.py  render_graph.py  seed_memory.py  verify_redisvl.py
specs/: README.md  milestone-1-scaffold-and-memory-schema.md  milestone-2-memory-path.md  milestone-3-web-pipeline.md  milestone-4-llms-logging-analytics.md  milestone-5-security-reliability.md  milestone-6-e2e-evals-delivery.md
specs/001-m1-scaffold-memory-schema/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-m2-memory-path/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-m3-web-pipeline/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-m4-llms-logging-analytics/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-m5-security-reliability/: data-model.md  plan.md  spec.md  (+3 more)
tests/: conftest.py
(+162 files in other folders)
