[project]
name = "memagent"
version = "0.1.0"
description = "Memory-first web agent: answers from Redis vector memory first, falls back to the web."
requires-python = ">=3.12,<3.14"
dependencies = [
    "langgraph>=1.2,<2",
    "langchain-text-splitters",
    "redis>=6.2,<7",
    "redisvl>=0.22,<0.24",
    "httpx>=0.28",
    "tenacity~=9.1",
    "trafilatura>=2.1,<3",
    "ddgs>=9,<10",
    "openai>=2",
    "pydantic>=2.11",
    "pydantic-settings",
    "typer>=0.16",
    "rich>=14",
    "structlog~=26.1",
]

[project.scripts]
memagent = "memagent.cli:app"

[dependency-groups]
dev = [
    "pytest~=8.4",
    "pytest-asyncio>=1,<2",
    "respx~=0.23",
    "ruff",
    "pytest-cov",
    "pytest-bdd>=8.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/memagent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires a running redis:8.2 (skipped when unreachable)",
    "e2e: full-lifecycle test against real redis",
]

[tool.ruff]
target-version = "py312"
line-length = 100
